--- a/css/styles.css
+++ b/css/styles.css
@@ -525,7 +525,9 @@ body {
     text-transform: capitalize;
     color: #2e2f42;
     margin-bottom: 72px;
-    margin-top: 96px;
+    padding-top: 96px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .about-team {
@@ -534,19 +536,23 @@ body {
     flex-direction: column;
     align-items: center;
     width: 320px;
-    display: inline-flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     gap: 72px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .container-team-page-our {
     padding-left: 28px;
     padding-right: 28px;
-    padding-bottom: 96px;
+    padding-bottom: 24px;
+    width: 320px;
 }
 
 .team-page {
+    margin-bottom: 72px;
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -613,7 +619,7 @@ body {
 }
 
 .list-portfolio {
-    background-color: #F4F4FD;
+    background-color: #FFFFFF;
     width: 320px;
     display: inline-flex;
     flex-direction: column;
@@ -625,7 +631,6 @@ body {
     width: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 288px;
-    height: 400px;
     border: 1px solid var(--CLOUD, #F4F4FD);
     background: var(--WHITE, #FFF);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -778,7 +783,9 @@ body {
 
 .form-button-footer {
     margin-left: auto;
+    margin-right: auto;
     display: block;
+    align-items: center;
     justify-content: center;
     margin-top: 72px;
 }
@@ -788,7 +795,7 @@ body {
     font-family: Roboto;
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.5; /* 150% */
+    line-height: 1.5;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
@@ -833,12 +840,12 @@ body {
     background-color: var(--IRIS, #4D5AE5);
     border: none;
     border-radius: 4px;
+    margin-top: 16px;
 }
 
 .button-icon-footer {
     margin-left: 16px;
     fill: #ffffff;
-    margin-top: 16px;
 }
 
 /* ============== /HEADER MOBILE STYLES ============== */
