--- a/css/styles.css
+++ b/css/styles.css
@@ -697,18 +697,20 @@ body {
 
 .footer-page {
     background-color: #2e2f42;
-    padding: 100px 0;
+    
 }
 
 .container-footer {
     max-width: 1158px;
-    margin-left: 156px;
-    margin-right: 156px;
     margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
     display: block;
     align-items: baseline;
+    width: 288px;
+    height: 664px;
+    padding-top: 97.5px;
+    padding-bottom: 96px;
 }
 
 .footer-logo-p {
@@ -778,7 +780,7 @@ body {
 }
 
 .logo-link-footer {
-
+    
 }
 
 .form-button-footer {
@@ -861,8 +863,351 @@ body {
 @media screen and (min-width: 768px) {
     .container {
       width: 736px;
+      margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
+      height: 72px;
     }
+
+    .mobile-open {
+        display: none;
+    }
+
+    .header-page {
+        padding: 0;
+        height: 72px;
+        border-bottom: 1px solid #e7e9fc;
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    }
+
+    .nav-list-header {
+        display: flex;
+        justify-content: space-between;
+        color: #404bbf;
+    }
+
+    .nav-list {
+        display: flex;
+        align-items: center;
+        position: relative;
+        color: #404bbf;
+    }
+
+    .nav-list-list {
+        display: flex;
+    }
+    
+    .nav-list-con {
+        display: flex;
+    }
+
+    .naw-list-after-logo {
+        gap: 40px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        color: #404bbf;
+    }
+
+    .header-nav {
+        position: relative;
+        color: #404bbf;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .menu-link {
+        font-family: Roboto, sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        padding: 0;
+        font-family: Roboto;
+    }
+    
+    .header-nav-a {
+        position: relative;
+        color: #404bbf;
+    }
+    
+    .header-nav-a::after {
+        content: '';
+        position: absolute;
+        height: 4px;
+        background-color: #404bbf;
+        border-radius: 2px; 
+        width: 100%;
+        left: 0;
+        bottom: -1px;
+    }
+
+    .page-address {
+        font-family: Roboto, sans-serif;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.6;
+        letter-spacing: 0.04em;
+        color: #434455;
+        margin-bottom: 16px;
+    }
+
+    .nav-list-con {
+        font-size: 12px;
+        display: flex;
+        row-gap: 12px;
+        padding: 16px 0;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .list-address {
+        color: #434455;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .menu-link-con {
+        color: #434455;
+        font-weight: 400;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .hero-page {
+        background-color: #2e2f42;
+        width: 768px;
+        height: 433px;
+        padding-top: 112px;
+        padding-bottom: 204px;
+        padding-left: 0;
+        padding-right: 0;
+        max-width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+        background: rgba(17, 17, 17, 0.6);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
+        url('../images/people-office.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    
+    .hero-text {
+        color: var(--WHITE, #FFFFFF);
+        text-align: center;
+        font-family: Roboto;
+        font-size: 56px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1.07;
+        letter-spacing: 0.02em;
+        width: 496px;
+        height: 120px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 36px;
+        padding: 0;
+    }
+
+    .button {
+        font-family: Roboto, sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        background: var(--IRIS, #4D5AE5);
+        color: var(--WHITE, #FFF); 
+        margin: 0 auto; 
+        display: block;
+        padding: 16px 32px;
+        align-items: flex-start;
+        gap: 10px;
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        background-color: #4D5AE5;
+        border-radius: 4px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .advantages-list-div {
+        display: none;
+    }
+    
+    .advantages-page-text {
+        text-align: start;
+        margin-bottom: 0;
+    }
+    
+    .sam-text {
+        width: 356px;
+    }
+    
+    .advantages-text-li {
+        display: flex;
+        flex-direction: column;
+        row-gap: 72px;
+        margin-top: 96px;
+        padding-left: 16px;
+        padding-right: 16px;
+
+        display: flex;
+        width: 356px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+        
+    }
+
+    .container-advantages-page {
+        margin: 0 auto;
+        padding-left: 15px;
+        padding-right: 15px;
+        height: 72px;
+        display: inline;
+    }
+
+    .advantages-list {
+        display: flex;
+        width: 356px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+    }
+
+    .list-portfolio {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 48px;
+    }
+    
+    .list-portfolio-img {
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .list-portfolio-img:hover {
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    }
+    
+    .div-app-img {
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .list-portfolio-img:hover .div-app-p{
+        transform: translateY(0%);
+    }
+    
+    .div-app-p {
+        position: absolute;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .div-app-p:hover {
+        transform: translateY(0%);
+    } 
+    
+    .name-and-about-app {
+        padding: 32px 16px;
+        border: 1px solid #e7e9fc;
+        border-top: none;
+    }
+
+    .logo-link-footer {
+        display: inline-block;
+        margin-bottom: 16px;
+    }
+    
+    .form-button-footer {
+    
+    }
+    
+    .form-button-footer-p {
+        color: var(--WHITE, #FFF);
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5; /* 150% */
+        letter-spacing: 0.02em;
+        margin-bottom: 16px;
+    }
+    
+    .form-footer {
+        display: flex;
+        gap: 24px;
+    }
+    
+    .label-form-footer {
+    
+    }
+    
+    .input-form-footer {
+        width: 264px;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid var(--WHITE, #FFF);
+        background-color: transparent;
+        font-size: 112px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        padding-left: 16px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        color: #FFFFFF;
+        font-size: 12px; 
+    }
+    
+    .button-footer {
+        font-family: "Roboto", sans-serif;
+        min-width: 165px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #ffffff;
+        cursor: pointer;
+        background-color: var(--IRIS, #4D5AE5);
+        border: none;
+        border-radius: 4px;
+    }
+    
+    .button-icon-footer {
+        margin-left: 16px;
+        fill: #ffffff;
+    }
+    
+    .input-form-footer::placeholder {
+        color: #FFFFFF;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 2;
+        letter-spacing: 0.04em;
+    }
+
+
+
+    
+
+
+
 }
+    
+    
+
+
 
 @media screen and (min-width: 1158px) {
     .container {
