--- a/css/styles.css
+++ b/css/styles.css
@@ -507,7 +507,7 @@ body {
 .advantages-text-li {
     display: flex;
     flex-direction: column;
-    row-gap: 72px;
+    row-gap: 24px;
     margin-top: 96px;
 }
 
@@ -863,10 +863,9 @@ body {
 @media screen and (min-width: 768px) {
     .container {
       width: 736px;
-      margin: 0 auto;
+      margin: 0;
       padding-left: 15px;
       padding-right: 15px;
-      height: 72px;
     }
 
     .mobile-open {
@@ -1043,27 +1042,10 @@ body {
     }
     
     .advantages-text-li {
-        display: flex;
-        flex-direction: column;
-        row-gap: 72px;
-        margin-top: 96px;
-        padding-left: 16px;
-        padding-right: 16px;
-
-        display: flex;
-        width: 356px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 8px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 72px 24px;
         
-    }
-
-    .container-advantages-page {
-        margin: 0 auto;
-        padding-left: 15px;
-        padding-right: 15px;
-        height: 72px;
-        display: inline;
     }
 
     .advantages-list {
@@ -1072,6 +1054,7 @@ body {
         flex-direction: column;
         align-items: flex-start;
         gap: 8px;
+        width: calc((778px - 24px * 2) / 2);
     }
 
     .list-portfolio {
@@ -1213,6 +1196,8 @@ body {
     .container {
       width: 1158px;
     }
+
+    
 }
 /* ============== HEADER MOBILE STYLES ============== */
 
