--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,21 @@ body {
   }
 
 .container {
-    padding-right: 16px;
-    padding-left: 16px;
+    padding: 0 16px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1158px) {
+    .container--tablet-tiny {
+        padding: 0 108px;
+    }
 }
 /* ============== /COMMON STYLES ============== */
 
@@ -479,6 +492,32 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.section {
+    padding: 96px 0;
+}
+
+@media screen and (min-width: 1158px) {
+    .section {
+        padding: 120px 0;
+    }
+}
+
+.section--background {
+    background: var(--CLOUD, #F4F4FD);
+}
+
+.section-title {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 72px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .advantages-list-div {
     display: none;
 }
@@ -544,15 +583,14 @@ body {
     margin-right: auto;
 }
 
-.container-team-page-our {
+/* .container-team-page-our {
     padding-left: 28px;
     padding-right: 28px;
     padding-bottom: 24px;
     width: 320px;
-}
+} */
 
 .team-page {
-    margin-bottom: 72px;
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -560,6 +598,159 @@ body {
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+
+.team-page-list {
+        display: grid;
+        row-gap: 72px;
+    }
+
+    @media screen and (min-width: 768px) {
+        .team-page-list {
+            grid-template-columns: repeat(2, 1fr);
+            row-gap: 64px;
+            column-gap: 24px;
+        }
+    }
+
+    @media screen and (min-width: 1158px) {
+        .team-page-list {
+            grid-template-columns: repeat(4, 1fr);
+        }
+    }
+
+    .team-page-item {
+        display: flex;
+        flex-direction: column;
+        background: #fff;
+    }
+
+    .team-page-picture {
+        display: block;
+        aspect-ratio: 264 / 260;
+    }
+
+    .team-page-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    .team-page-wrapper {
+        padding: 32px 16px;
+        display: grid;
+        gap: 8px;
+        text-align: center;
+    }
+
+    .team-page-title {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+    }
+
+    .team-page-position {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
+.list-portfolio {
+    display: grid;
+    row-gap: 48px;
+}
+
+@media screen and (min-width: 768px) {
+    .list-portfolio {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .list-portfolio {
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 48px;
+    }
+}
+/* ------------------------------------------ */
+.div-app-p {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.div-app-p:hover {
+    transform: translateY(0%);
+} 
+
+.name-and-about-app {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
+.text-app {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.about-app {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.about-app:hover {
+    transform: translateY(0%);
+}
+
+.list-portfolio {
+    background-color: #FFFFFF;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+}
+
+.list-portfolio-img {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid var(--CLOUD, #F4F4FD);
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+
+.list-portfolio-img:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.our-portfolio-picture {
+    position: relative;
+    overflow: hidden;
+}
+
+.list-portfolio-img:hover .div-app-p{
+    transform: translateY(0%);
+}
+
+
 
 .name, .name-text, .name-photo {
     background-color: #FFFFFF;
@@ -614,86 +805,14 @@ body {
     fill: #f4f4fd;
 }
 
-.our-portfolio-page {
-    padding-bottom: 120px;
-}
-
-.list-portfolio {
-    background-color: #FFFFFF;
-    width: 320px;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 72px;
-}
-
-.list-portfolio-img {
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    width: 288px;
-    border: 1px solid var(--CLOUD, #F4F4FD);
-    background: var(--WHITE, #FFF);
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
 
 
-.list-portfolio-img:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
 
-.div-app-img {
-    position: relative;
-    overflow: hidden;
-}
 
-.list-portfolio-img:hover .div-app-p{
-    transform: translateY(0%);
-}
 
-.div-app-p {
-    position: absolute;
-    top: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-    padding: 40px 32px;
-    background-color: #4d5ae5;
-    height: 100%;
-    width: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.div-app-p:hover {
-    transform: translateY(0%);
-} 
 
-.name-and-about-app {
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-}
 
-.text-app {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
-
-.about-app {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.about-app:hover {
-    transform: translateY(0%);
-}
 
 .footer-page {
     background-color: #2e2f42;
@@ -852,23 +971,15 @@ body {
 
 /* ============== /HEADER MOBILE STYLES ============== */
 
-@media screen and (min-width: 480px) {
+/* @media screen and (min-width: 480px) {
     .container {
       width: 367px;
       margin-left: auto;
       margin-right: auto;
     }
-}
+} */
   
 @media screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-      width: 736px;
-      margin: 0;
-      padding-left: 15px;
-      padding-right: 15px;
-    }
-
     .mobile-open {
         display: none;
     }
@@ -974,7 +1085,7 @@ body {
     .hero-page {
         background-color: #2e2f42;
         width: 768px;
-        height: 433px;
+        /* height: 433px; */
         padding-top: 112px;
         padding-bottom: 204px;
         padding-left: 0;
@@ -1436,13 +1547,6 @@ body {
         color: #4d5ae5;
         fill: #f4f4fd;
     }
-
-
-
-    
-
-
-
 }
     
     
@@ -1451,7 +1555,7 @@ body {
 
 @media screen and (min-width: 1158px) {
     .container {
-      width: 1158px;
+      max-width: 1158px;
     }
 
     .menu-link {
@@ -1579,6 +1683,7 @@ body {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
     
     .team-page-our {
         background-color: #F4F4FD;
@@ -1720,7 +1825,7 @@ body {
         font-weight: 400;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    
+/*     
     .container { 
         max-width: 1158px;
         margin-left: 156px;
@@ -1728,7 +1833,7 @@ body {
         margin: 0 auto;
         padding-left: 15px;
         padding-right: 15px;
-    }
+    } */
     
     .container-footer {
         max-width: 1158px;
@@ -1821,10 +1926,10 @@ body {
         box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     }
     
-    .advantages-page {
+    /* .advantages-page {
         padding: 120px 0;
-    
-    }
+    } */
+
     
     .advantages-list {
         width: calc((100% - 72px) / 4);
@@ -1861,30 +1966,7 @@ body {
         transform: translateY(0%);
     }
     
-    .div-app-p {
-        position: absolute;
-        top: 0;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-        padding: 40px 32px;
-        background-color: #4d5ae5;
-        height: 100%;
-        width: 100%;
-        transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .div-app-p:hover {
-        transform: translateY(0%);
-    } 
-    
-    .name-and-about-app {
-        padding: 32px 16px;
-        border: 1px solid #e7e9fc;
-        border-top: none;
-    }
+
     
     .logo-link-footer {
         display: inline-block;
