--- a/css/styles.css
+++ b/css/styles.css
@@ -181,10 +181,6 @@ ul {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu-container {
-    position: relative;
-}
-
 .mobile-menu-list {
     margin-top: 72px;
     margin-bottom: 128px;
@@ -243,7 +239,7 @@ ul {
     height: 40px;
 }
 
-.footer-icons {
+.mobile-icons {
     display: flex;
     gap: 40px;
 }
@@ -278,7 +274,7 @@ ul {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-close {
+/* .modal-form-close {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -293,7 +289,7 @@ ul {
     padding: 0;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .modal-form-close:hover,
 .modal-form-close:focus {
@@ -625,6 +621,7 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     font-size: 16px;
+    font-weight: 500;
 }
 
 @media screen and (min-width: 768px) {
@@ -1092,7 +1089,6 @@ ul {
 
     .header-page {
         padding: 0;
-        height: 72px;
         border-bottom: 1px solid #e7e9fc;
         box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     }
@@ -1138,9 +1134,14 @@ ul {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
-        padding: 0;
+        padding: 24px 0;
         font-family: Roboto;
     }
+
+    .menu-link:hover,
+    .menu-link:focus {
+        color: #404BBF;
+}
     
     .header-nav-a {
         position: relative;
@@ -1173,7 +1174,6 @@ ul {
         font-size: 12px;
         display: flex;
         row-gap: 12px;
-        padding: 16px 0;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -1185,6 +1185,9 @@ ul {
     .menu-link-con {
         color: #434455;
         font-weight: 400;
+        font-size: 12px;
+        line-height: 1.6;
+        letter-spacing: 0.04em;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -1841,6 +1844,7 @@ ul {
     
     .nav-list-con {
         display: flex;
+        flex-direction: row;
         gap: 40px;
         padding: 24px 0;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -2015,7 +2019,7 @@ ul {
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
-    .modal-form-close {
+    /* .modal-form-close {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -2030,7 +2034,7 @@ ul {
         padding: 0;
         cursor: pointer;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    } */
     
     .modal-form-close:hover,
     .modal-form-close:focus {
