--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,7 @@ ul {
     background: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
     z-index: 99999999999999999999;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -1930,9 +1931,6 @@ ul {
         font-size: 16px;
         font-weight: 500;
         line-height: 1.5; /* 150% */
-        letter-spacing: 0.02em;
-        margin-bottom: 16px;
-    } */
     
     .form-footer {
         display: flex;
@@ -1989,7 +1987,7 @@ ul {
         letter-spacing: 0.04em;
     }
     
-    .backdrop {
+    /* .backdrop {
         position: fixed;
         top: 0;
         left: 0;
@@ -2001,9 +1999,9 @@ ul {
         /* opacity: 0;
         visibility: hidden;
         pointer-events: none; */
-    }
     
-    .modal {
+    
+    /* .modal {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -2017,7 +2015,7 @@ ul {
         min-height: 584px;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    } */
     
     /* .modal-form-close {
         display: flex;
@@ -2036,7 +2034,7 @@ ul {
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     } */
     
-    .modal-form-close:hover,
+    /* .modal-form-close:hover,
     .modal-form-close:focus {
         background-color: #404bbf;
         border: none;
@@ -2207,9 +2205,5 @@ ul {
         border: none; 
         color: #4d5ae5;
         fill: #f4f4fd;
-    }
-
-    
+    } */
 }
-/* ============== HEADER MOBILE STYLES ============== */
-
